讲关系改为流动线条

--- a/monitor/BossStatus.html
+++ b/monitor/BossStatus.html
@@ -115,10 +115,10 @@
         <span><i></i></span>
       </div>
       <div class="countryLine">
-        <div class="itemLine itemLine1"><div class="line"></div></div>
-        <div class="itemLine itemLine2"><div class="line"></div></div>
-        <div class="itemLine itemLine3"><div class="line"></div></div>
-        <div class="itemLine itemLine4"><div class="line"></div></div>
+        <div class="itemLine itemLine1"></div>
+        <div class="itemLine itemLine2"></div>
+        <div class="itemLine itemLine3"></div>
+        <div class="itemLine itemLine4"></div>
       </div>
     </div>
   </div>
