--- a/monitor/BossStatus.html
+++ b/monitor/BossStatus.html
@@ -185,11 +185,103 @@
     </div>
   </script>
   <script type="text/javascript">
-    var grafana_server = new $.jqgrafana()
+    var grafana_server = new $.jqgrafana(), bossStatus = {}
     grafana_server.queryData('alerts?state=all', 'GET', null, function(res) {
+      bossStatus = {}
       res.forEach(function(item) {
-        console.log(item)
+        if (item.name.indexOf('微服务状态-EC2-BOSS') >= 0) {
+          if (bossStatus.status == undefined) {
+            bossStatus.status = {
+              success: 0,
+              total: 0
+            }
+          }
+          bossStatus.status.total += 1
+          if (item.state == 'ok') {
+            bossStatus.status.success += 1
+          }
+        } else if (item.name.indexOf('业务状态-BOSS-CA-') >= 0) {
+          if (bossStatus.ca == undefined) {
+            bossStatus.ca = {
+              success: 0,
+              total: 0
+            }
+          }
+          bossStatus.ca.total += 1
+          if (item.state == 'ok') {
+            bossStatus.ca.success += 1
+          }
+        } else if (item.name.indexOf('业务状态-BOSS-短信-') >= 0) {
+          if (bossStatus.msg == undefined) {
+            bossStatus.msg = {
+              success: 0,
+              total: 0
+            }
+          }
+          bossStatus.msg.total += 1
+          if (item.state == 'ok') {
+            bossStatus.msg.success += 1
+          }
+        } else if (item.name.indexOf('业务状态-BOSS-支付-') >= 0) {
+          if (bossStatus.pay == undefined) {
+            bossStatus.pay = {
+              success: 0,
+              total: 0
+            }
+          }
+          bossStatus.pay.total += 1
+          if (item.state == 'ok') {
+            bossStatus.pay.success += 1
+          }
+        } else if (item.name.indexOf('基础服务-系统缓存-') >= 0) {
+          if (bossStatus.cache == undefined) {
+            bossStatus.cache = {
+              success: 0,
+              total: 0
+            }
+          }
+          bossStatus.cache.total += 1
+          if (item.state == 'ok') {
+            bossStatus.cache.success += 1
+          }
+        } else if (item.name.indexOf('基础服务-EC2HOST-') >= 0) {
+          if (bossStatus.EC2 == undefined) {
+            bossStatus.EC2 = {
+              success: 0,
+              total: 0
+            }
+          }
+          bossStatus.EC2.total += 1
+          if (item.state == 'ok') {
+            bossStatus.EC2.success += 1
+          }
+        } else if (item.name.indexOf('基础服务-BOSSDB') >= 0) {
+          if (bossStatus.BOSSDB == undefined) {
+            bossStatus.BOSSDB = {
+              success: 0,
+              total: 0
+            }
+          }
+          bossStatus.BOSSDB.total += 1
+          if (item.state == 'ok') {
+            bossStatus.BOSSDB.success += 1
+          }
+        } else if (item.name.indexOf('基础服务-K8s') >= 0) {
+          if (bossStatus.K8s == undefined) {
+            bossStatus.K8s = {
+              success: 0,
+              total: 0
+            }
+          }
+          bossStatus.K8s.total += 1
+          if (item.state == 'ok') {
+            bossStatus.K8s.success += 1
+          }
+        } else {
+          console.log(item)
+        }
       })
+      console.log(bossStatus)
     })
     moment.locale('zh_cn')
     $('#eastAfrica').html('')
