修改国家列表

--- a/monitor/BossStatus.html
+++ b/monitor/BossStatus.html
@@ -172,7 +172,9 @@
         <img src="img/country/{{enName}}.jpg" alt="">
       </div>
       <div class="countryName">
-        {{name}}
+        <div class="name">
+          {{name}}
+        </div>
       </div>
       <div class="countryTime">
         {{time}}
