--- a/monitor/index.html
+++ b/monitor/index.html
@@ -48,7 +48,7 @@
     <div class="item"><label>播放成功率：</label><p id="appplay"></p></div>
     <div class="item"><label>首页打开成功率：</label><p id="apphome"></p></div>
     <div class="item"><label>登录成功率：</label><p id="applogin"></p></div>
-    <div class="item"><label>注册成功转化率：</label><p id="appregister"></p></div>
+    <div class="item"><label>注册成功率：</label><p id="appregister"></p></div>
     <div class="item"><label>订单服务成功率：</label><p id="apporder"></p></div>
     <div class="item"><label>支付成功率：</label><p id="apppay"></p></div>
   </div>
