--- a/monitor/world.html
+++ b/monitor/world.html
@@ -30,22 +30,22 @@
         map: 'world',
         show: true,
         roam: true,
-        regionHeight: 0.4,
-        environment: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
-          offset: 0,
-          color: '#007fd5' // 天空颜色
-        },{
-          offset: 0.6,
-          color: '#007fd5' // 天空颜色
-        }, {
-          offset: 0.6,
-          color: '#333' // 地面颜色
-        }, {
-          offset: 1,
-          color: '#333' // 地面颜色
-        }], false),
+        regionHeight: 1,
+        // environment: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
+        //   offset: 0,
+        //   color: '#007fd5' // 天空颜色
+        // },{
+        //   offset: 0.6,
+        //   color: '#007fd5' // 天空颜色
+        // }, {
+        //   offset: 0.6,
+        //   color: '#333' // 地面颜色
+        // }, {
+        //   offset: 1,
+        //   color: '#333' // 地面颜色
+        // }], false),
         itemStyle: {
-          color: '#777',
+          color: '#00ffff',
           borderColor: '#fff'
         },
         emphasis: {
