修改世界地图

--- a/monitor/world.html
+++ b/monitor/world.html
@@ -31,21 +31,21 @@
         show: true,
         roam: true,
         regionHeight: 1,
-        // environment: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
-        //   offset: 0,
-        //   color: '#007fd5' // 天空颜色
-        // },{
-        //   offset: 0.6,
-        //   color: '#007fd5' // 天空颜色
-        // }, {
-        //   offset: 0.6,
-        //   color: '#333' // 地面颜色
-        // }, {
-        //   offset: 1,
-        //   color: '#333' // 地面颜色
-        // }], false),
+        environment: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
+          offset: 0,
+          color: '#007fd5' // 天空颜色
+        },{
+          offset: 0.6,
+          color: '#007fd5' // 天空颜色
+        }, {
+          offset: 0.6,
+          color: '#333' // 地面颜色
+        }, {
+          offset: 1,
+          color: '#333' // 地面颜色
+        }], false),
         itemStyle: {
-          color: '#00ffff',
+          color: '#999',
           borderColor: '#fff'
         },
         emphasis: {
