--- a/monitor/index.html
+++ b/monitor/index.html
@@ -14,7 +14,7 @@
   <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
   <div id="main"></div>
   <!--<div class="aws" onclick="goto('http://10.0.224.100:3000/d/7kn6CcImz/gslb-sheng-chan-huan-jing?refresh=1m')">-->
-  <div class="aws" onclick="goto('http://192.168.32.70:8080/bi/Viewer?proc=1&action=viewer&hback=true&db=!5927!!5c4f!!5c55!!793a!!2f!!7efc!!5408!!4e1a!!52a1!!670d!!52a1!!76d1!!63a7!!5e73!!53f0!_!52a0!!9875!!9762!_!5de5!!5355!_!5de6!_!5168!!5c40!!8c03!!5ea6!!7cfb!!7edf!.db&isAir=false&browserType=chrome')">
+  <div class="aws" onclick="gotoTop('http://192.168.32.70:8080/bi/Viewer?proc=1&action=viewer&hback=true&db=!5927!!5c4f!!5c55!!793a!!2f!!7efc!!5408!!4e1a!!52a1!!670d!!52a1!!76d1!!63a7!!5e73!!53f0!_!52a0!!9875!!9762!_!5de5!!5355!_!5de6!_!5168!!5c40!!8c03!!5ea6!!7cfb!!7edf!.db&isAir=false&browserType=chrome')">
     <span></span>
     <span></span>
     <span></span>
@@ -28,7 +28,7 @@
     <div class="item"><label>HTTP QPS：</label><p id="qps">0</p></div>
   </div>
   <!--<div id="radar" class="radar" onclick="goto('./to_radar.html')">-->
-  <div id="radar" class="radar" onclick="goto('http://192.168.32.70:8080/bi/Viewer?proc=1&action=viewer&hback=true&db=!5927!!5c4f!!5c55!!793a!!2f!!7efc!!5408!!4e1a!!52a1!!670d!!52a1!!76d1!!63a7!!5e73!!53f0!_!52a0!!9875!!9762!_!5de5!!5355!_!5de6!_!5357!!975e!OTT.db&isAir=false&browserType=chrome')">
+  <div id="radar" class="radar" onclick="gotoTop('http://192.168.32.70:8080/bi/Viewer?proc=1&action=viewer&hback=true&db=!5927!!5c4f!!5c55!!793a!!2f!!7efc!!5408!!4e1a!!52a1!!670d!!52a1!!76d1!!63a7!!5e73!!53f0!_!52a0!!9875!!9762!_!5de5!!5355!_!5de6!_!5357!!975e!OTT.db&isAir=false&browserType=chrome')">
     <span></span>
     <span></span>
     <span></span>
@@ -194,10 +194,10 @@
       if (params.seriesType && (params.seriesType === 'effectScatter' || params.seriesType === 'scatter')) {
         switch (params.name) {
           case '北京':
-            goto('http://192.168.32.70:8080/bi/Viewer?proc=1&action=viewer&hback=true&db=!5927!!5c4f!!5c55!!793a!!2f!!7efc!!5408!!4e1a!!52a1!!670d!!52a1!!76d1!!63a7!!5e73!!53f0!_!52a0!!9875!!9762!_!5de5!!5355!_!5de6!_!5168!!5c40!!8c03!!5ea6!!7cfb!!7edf!.db&isAir=false&browserType=chrome')
+              gotoTop('http://192.168.32.70:8080/bi/Viewer?proc=1&action=viewer&hback=true&db=!5927!!5c4f!!5c55!!793a!!2f!!7efc!!5408!!4e1a!!52a1!!670d!!52a1!!76d1!!63a7!!5e73!!53f0!_!52a0!!9875!!9762!_!5de5!!5355!_!5de6!_!5168!!5c40!!8c03!!5ea6!!7cfb!!7edf!.db&isAir=false&browserType=chrome')
             break;
           case '亚马逊云':
-            goto('http://10.0.224.100:3000/d/kU0SkYDik/otthou-tai?orgId=1&refresh=1m&from=now-6h&to=now')
+              goto('http://10.0.224.100:3000/d/kU0SkYDik/otthou-tai?orgId=1&refresh=1m&from=now-6h&to=now')
             break;
           default:
             if (params.data.url) {
@@ -212,6 +212,11 @@
       if (url) {
         location.href = url
       }
+    }
+    function gotoTop(url){
+        if (url) {
+            top.location.href = url
+        }
     }
   </script>
   <script src="./js/template-web.js?version=1528769604144" charset="utf-8"></script>
