--- a/monitor/index.html
+++ b/monitor/index.html
@@ -192,7 +192,7 @@
       if (params.seriesType && (params.seriesType === 'effectScatter' || params.seriesType === 'scatter')) {
         switch (params.name) {
           case '北京':
-              gotoTop('http://192.168.32.70:8080/bi/Viewer?proc=1&action=viewer&hback=true&db=!5927!!5c4f!!5c55!!793a!!2f!!7efc!!5408!!4e1a!!52a1!!670d!!52a1!!76d1!!63a7!!5e73!!53f0!_!52a0!!9875!!9762!_!5de5!!5355!_!5de6!_!5168!!5c40!!8c03!!5ea6!!7cfb!!7edf!.db&isAir=false&browserType=chrome')
+              gotoTop('http://10.0.224.100:3000/d/Qb7BQ5Siz/cachezhan-dian-ce-shi-zu?refresh=1m&orgId=1')
             break;
           case '亚马逊云':
               goto('http://10.0.224.100:3000/d/kU0SkYDik/otthou-tai?orgId=1&refresh=1m&from=now-6h&to=now')
