修改语法错误

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -192,7 +192,7 @@
       if (params.seriesType && (params.seriesType === 'effectScatter' || params.seriesType === 'scatter')) {
         switch (params.name) {
           case '北京':
-              gotoTop('http://10.0.224.100:3000/d/Qb7BQ5Siz/cachezhan-dian-ce-shi-zu?refresh=1m&orgId=1')
+              goto('http://10.0.224.100:3000/d/Qb7BQ5Siz/cachezhan-dian-ce-shi-zu?refresh=1m&orgId=1')
             break;
           case '亚马逊云':
               goto('http://10.0.224.100:3000/d/kU0SkYDik/otthou-tai?orgId=1&refresh=1m&from=now-6h&to=now')
