--- a/monitor/world.html
+++ b/monitor/world.html
@@ -7,8 +7,11 @@
   <style media="screen">
     html,
     body {
+      margin: 0;
+      padding: 0;
       width: 100%;
       height: 100%;
+      background: url('./img/world/bg.jpg') repeat-x 100% 100%;
     }
 
     #main {
@@ -23,42 +26,94 @@
   <script src="./js/echarts.js?version=1528769604144" charset="utf-8"></script>
   <script src="./js/echarts-gl.min.js?version=1528769604144"></script>
   <script src="./map/world.js?version=1528769604144"></script>
+  <script src="./js/svg.js?version=1528769604144"></script>
   <script type="text/javascript">
+  echarts.registerMap('world', worldMap)
     var myChart = echarts.init(document.getElementById('main'))
     var options = {
       geo3D: {
         map: 'world',
         show: true,
-        roam: true,
         regionHeight: 1,
-        environment: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
-          offset: 0,
-          color: '#007fd5' // 天空颜色
-        },{
-          offset: 0.6,
-          color: '#007fd5' // 天空颜色
-        }, {
-          offset: 0.6,
-          color: '#333' // 地面颜色
-        }, {
-          offset: 1,
-          color: '#333' // 地面颜色
-        }], false),
+        boxWidth: 250,
+        left: '-20%',
         itemStyle: {
-          color: '#999',
-          borderColor: '#fff'
+          opacity: 1,
+          color: '#42b9e5',
+          borderWidth: 1,
+          borderColor: '#59dafa'
         },
         emphasis: {
           itemStyle: {
-            show: false
+            opacity: 1,
+            color: '#42b9e5',
+            borderWidth: 1,
+            borderColor: '#59dafa'
           },
           label: {
             show: false
           }
         }
-      }
+      },
+      series:[
+        {
+          name: '上星站',
+          type: 'scatter3D',
+          coordinateSystem: 'geo3D',
+          symbol: sxzSvg,
+          symbolSize:50,
+          data: [
+            {name: '测试-播控中心', value: [21, -8, 1],itemStyle: {color: '#fff'} }
+          ]
+        },
+        {
+          name: '发射塔',
+          type: 'scatter3D',
+          coordinateSystem: 'geo3D',
+          symbol: fstSvg,
+          symbolSize:50,
+          data: [
+            {name: '测试-发射塔', value: [23, -8, 1], itemStyle: {color: '#fff'} }
+          ]
+        },
+        {
+          name: '播控中心',
+          type: 'scatter3D',
+          coordinateSystem: 'geo3D',
+          symbol: bkzxSvg,
+          symbolSize:50,
+          data: [
+            {name: '测试-播控中心', value: [27, -8, 1], itemStyle: {color: '#fff'}}
+          ]
+        },
+        {
+          name: '卫星',
+          type: 'scatter3D',
+          coordinateSystem: 'geo3D',
+          symbol: wxSvg,
+          symbolSize:50,
+          data: [
+            {name: '卫星1', value: [80, 120, 1], itemStyle: {color: '#30af81'}},
+            {name: '卫星2', value: [120, 120, 1], itemStyle: {color: '#30af81'}},
+            {name: '卫星3', value: [160, 120, 1], itemStyle: {color: '#30af81'}}
+          ]
+        },
+        {
+          name: '连接线',
+          type: 'lines3D',
+          coordinateSystem: 'geo3D',
+          blendMode: 'lighter',
+          lineStyle: {
+            width: 2,
+            opacity: 1
+          },
+          data: [
+            [[23, -8],[80, 120]],
+          ]
+        }
+      ]
     }
-    myChart.setOption(options)
+    myChart.setOption(options, true)
   </script>
 </body>
 
